3rd attempt, added new functions and fixed for bugs mentioned in 2nd attempt notes. Added some simple CSS styling. Details in 3rd attempt notes. Wrapping up project.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body, html {
     height: 100%;
-  }
+}
 
 body {
 	background: url("julia-craice-95kwyisCztk-unsplash.jpg") no-repeat center/cover;
@@ -55,23 +55,37 @@ div.row5 {
     background-color: yellow;
 }
 
-#zero {
-    width: 160px;
-}
-
-#point {
-    width: 80px;
-}
-
-#equal {
-    width: 80px;
-}
-
 button {
     font-size: 30px;
     font-weight: bold;
     width: 100%;
     height: 65px;
+}
+
+#delete {
+    font-size: 25px;
+}
+
+button:hover {
+    color: darkolivegreen;
+    font-size: 220%;
+}
+
+button#delete:hover {
+    color: darkolivegreen;
+    font-size: 180%;
+}
+
+.number {
+    background-color: blanchedalmond;
+}
+
+.function1 {
+    background-color: #f5b295;
+}
+
+.function2 {
+    background-color: #f5ce9a;
 }
 
 
